# otc.sol

./: Cargo.toml  Dockerfile  README.md  diesel.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  lib.rs  main.rs  solana.rs
crates/api/src/handlers/: auth_handlers.rs  mod.rs  trades.rs
crates/api/src/middleware/: auth_middleware.rs
crates/api/tests/: auth_tests.rs  integration_test.rs  integration_tests.rs  trade_tests.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  schema.rs
migrations/2024-12-02-234449_create_users/: up.sql
migrations/2024-12-03-225933_create_trades/: up.sql
src/: schema.rs
