[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api-bin"
path = "src/main.rs" # This points to the binary's entry point

[dependencies]
actix-web = { version = "4.0", features = ["macros"] }
actix-web-httpauth = "0.7.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.14.17"
solana-sdk = "1.14.17"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
bcrypt = "0.12"
db = { path = "../db" }
jsonwebtoken = "8.2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
actix-service = "2.0"